[project]
name = "lesbontuyeau"
version = "0.1.0"
description = "lesbontuyeau using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
lesbontuyeau = "lesbontuyeau.main:run"
run_crew = "lesbontuyeau.main:run"
train = "lesbontuyeau.main:train"
replay = "lesbontuyeau.main:replay"
test = "lesbontuyeau.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
